# G

./: .g.conf  .gitignore  CHANGELOG.md  MANIFEST.in  QUICKSTART.md  README.md  TODO.md  WORKFLOW.md  doxygen.sh  example.py  g.sh  gitconfig.conf  mkchangelog.py  p.python  pyproject.toml  requirements.txt  setup.py  venv.sh
.codex/: history.jsonl  version.json
.codex/prompts/: req.change.md  req.check.md  req.fix.md  req.new.md
.codex/sessions/2025/12/15/: rollout-2025-12-15T09-11-50-019b2110-d896-7e90-8b58-5e15681c467f.jsonl  rollout-2025-12-15T09-15-54-019b2114-8f1f-7e53-9510-172d028728b4.jsonl  rollout-2025-12-15T14-05-30-019b221d-b310-7143-9b06-d60f82aef7f2.jsonl  rollout-2025-12-15T14-33-38-019b2237-7485-7303-aad4-157c495be549.jsonl  rollout-2025-12-15T15-11-17-019b2259-ee39-7c11-b613-5d32c161f9c9.jsonl  rollout-2025-12-15T16-09-01-019b228e-c910-7c60-aa02-950574d79541.jsonl  rollout-2025-12-15T16-40-06-019b22ab-3eb0-7891-8ce9-b00238a6a671.jsonl
.codex/sessions/2025/12/16/: rollout-2025-12-16T14-44-50-019b2768-1075-7620-b75a-4f11d3b4aa31.jsonl
.codex/sessions/2025/12/17/: rollout-2025-12-17T09-50-39-019b2b81-1882-7b50-ae4a-d08364187e5a.jsonl  rollout-2025-12-17T10-08-08-019b2b91-1b8c-7882-9e73-18bc533c1986.jsonl
.gemini/commands/: req.change.toml  req.check.toml  req.cover.toml  req.fix.toml  req.new.toml  req.write.toml
.github/agents/: req.change.agent.md  req.cover.agent.md  req.fix.agent.md  req.new.agent.md  req.write.agent.md
.github/workflows/: release-uvx.yml
.req/: config.json
docs/: REFERENCES.md  REQUIREMENTS.md  WORKFLOW.md  requirements.md
g/: __init__.py  cli.py  core.py
req/: requirements.md
scripts/: g.sh
src/git_alias/: __init__.py  __main__.py  core.py  foresta.py
tests/: __init__.py  test_alias_help.py  test_backup_command.py  test_changelog_command.py  test_cmd_aa.py  test_cmd_cm.py  test_cmd_conventional.py  test_cmd_diff_aliases.py  test_cmd_graph_commands.py  test_cmd_l.py  test_cmd_ls.py  test_cmd_lt.py  test_cmd_o.py  test_cmd_ra.py  test_cmd_release.py  test_cmd_rollback.py  test_cmd_wip.py  test_cmd_worktree_aliases.py  test_comment_format.py  test_commit_strategy.py  test_config_io.py  test_core.py  test_dependency_manifests.py  test_launcher_g_sh.py  test_release_flow.py  test_remote_status.py  test_status_helpers.py  test_update_check.py  test_ver_command.py
