[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-alias"
version = "0.20.0"
description = "Emulate personalized git aliases via an uvx-compatible interface."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Francesco Rolando" }
]
keywords = ["git", "alias", "uv", "astral", "uvx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Configuration Management",
]

dependencies = ["pathspec"]

[project.urls]
Homepage = "https://github.com/Ogekuri/G"
Repository = "https://github.com/Ogekuri/G"

[project.scripts]
git-alias = "git_alias.core:main"
g = "git_alias.core:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_alias", "git_alias.*"]

[tool.setuptools.package-data]
git_alias = ["*.py"]
